unpackaged/main/default/objects/pse__Miscellaneous_Adjustment__c/fields/Invoice_Method__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Method__c</fullName>
    <formula>CASE( pse__Transaction_Category__c , "Pre-billed Revenue", "Bill in Advance (prepaid)", "Ready-to-Bill Revenue", "Bill on Delivery (postpaid)","Type Error")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Method</label>
    <type>Text</type>
</CustomField>