unpackaged/main/default/objects/pse__Miscellaneous_Adjustment__c/fields/Services_Product__c.field-meta.xml
<CustomField>
    <fullName>Services_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ADO 269310 Lift and Shift PSA Prod to GTM</description>
    <label>Services Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Miscellaneous Adjustments</relationshipLabel>
    <relationshipName>Miscellaneous_Adjustments</relationshipName>
    <type>Lookup</type>
</CustomField>