unpackaged/main/default/objects/pse__Miscellaneous_Adjustment__c/fields/Type_of_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Adjustment__c</fullName>
    <label>Type of Adjustment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>GL Revenue Correction</fullName>
            </value>
            <value>
                <fullName>RFC- Full Amount</fullName>
            </value>
            <value>
                <fullName>RFC -Partial Amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>