unpackaged/main/default/objects/pse__Miscellaneous_Adjustment__c/validationRules/Create_Modify_Miscellaneous_Adjustment.validationRule-meta.xml
<ValidationRule>
    <fullName>Create_Modify_Miscellaneous_Adjustment</fullName>
    <active>true</active>
    <description>Prevents users without the Misc. Adj. Special Permission from creating/modifying a Misc. Adj.</description>
    <errorConditionFormula>NOT(INCLUDES( $User.Special_Permissions__c, 'Miscellaneous Adjustment - VR'))</errorConditionFormula>
    <errorMessage>Miscellaneous Adjustments can only be created and modified by the PSA Core team.</errorMessage>
</ValidationRule>